--- a/src/Components/FAQ/faq.css
+++ b/src/Components/FAQ/faq.css
@@ -56,7 +56,7 @@
 .faq-header-container::after {
     content: url('../../assets/text-line-vect.svg');
     position: absolute;
-    bottom: -20px;
+    bottom: -10px;
     width: 450px;
     left: 10px;
     z-index: -1;
