--- a/src/Components/GameFeatures/GameModes/GameModes.css
+++ b/src/Components/GameFeatures/GameModes/GameModes.css
@@ -44,11 +44,11 @@
     border-radius: 1rem;
     display: flex;
     justify-content: center;
-    height: 380px;
+    height: 340px;
     width: 100%;
     /* height: 295px ;
     width: 245px; */
-    padding: 10px 5px;
+    padding: 0px 5px;
     margin: 0;
 }
 
@@ -142,6 +142,10 @@
 }
 
 
+.tdm-mt{
+    margin-top: .5rem;
+}
+
 
 @media (max-width: 1200px){
     .game-modes-card{
@@ -151,17 +155,19 @@
 }
 @media (max-width: 768px){
     .game-modes-card{
-        height: 380px;
-        padding: 2px 2px;
+        height: 320px;
+        padding: 2px 5px;
+        width: 90%;
+        margin: auto;
         }
 
     .game-modes-container{
         margin-top: 1rem;
     }
 
-    .game-modes-card-lg{
+    /* .game-modes-card-lg{
         display: none;
-    }
+    } */
 
     .game-modes-carousel-sm{
         display: block;
@@ -178,6 +184,11 @@
 
     .game-modes-heading{
         font-size: 2.5rem;
+    }
+
+
+    .mt-mb{
+        margin-top: -5px !important;
     }
 
   
